add text file detection

--- a/html/index.html
+++ b/html/index.html
@@ -45,7 +45,7 @@ body {
         <div class="container">
             <h1>This is a F1L3 instance.</h1>
             <form class='upload-form' method="POST" enctype="multipart/form-data" action="/">
-                <pre class='upload-cmd'>thing | curl -F upload=@- http://f1l3.0u0.fun/</pre>
+                <pre class='upload-cmd'>thing | curl -F upload=@- http://f.0u0.fun/</pre>
                 <input name="upload" type="file">
                 <button type="submit">upload</button>
             </form>
